<resources>
    <string name="app_name">Login Firebase</string>

    <string name="title_active_login">Firebase Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sin up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>

    <string name="_1_0">$1.0</string>
    <string name="name_of_drink">Name of Drink</string>
    <string name="todo">TODO</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textHome">Bienvenidos al Home</string>
    <string name="hintComment">Comentario</string>
    <string name="btSaveComment">Guardar Comentario</string>
    <string name="textTitleComments">Mi Comentario</string>
    <string name="btBuyProduct">Agregar al Carrito</string>
    <string name="textTitleAdmin">Mi Perfil</string>
    <string name="hintName">Nombre</string>
    <string name="hintAddress">Dirección</string>
    <string name="hintPhone">Teléfono</string>
    <string name="hintMail">Correo</string>
    <string name="btSaveAdmin">Guardar cambios</string>
    <string name="catalogoImageView">TODO</string>
    <string name="Text">Bienvenidos</string>


</resources>