<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtPrice"
            android:text="@string/_1_0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtName"
            android:text="@string/name_of_drink"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


     </LinearLayout>





</androidx.cardview.widget.CardView>