<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/toolbarAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation"
                    android:layout_margin="@dimen/defaultLayoutMargin">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/ibPhotoAdmin"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/ibHeight"
                            android:src="@mipmap/ic_launcher"
                            android:layout_gravity="center_horizontal"/>

                        <EditText
                            android:id="@+id/etNameAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintName"
                            android:inputType="textMultiLine"
                            android:gravity="center_horizontal"/>

                        <EditText
                            android:id="@+id/etAddressAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintAddress"
                            android:inputType="textMultiLine"
                            android:gravity="center_horizontal"/>

                        <EditText
                            android:id="@+id/etPhoneAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintPhone"
                            android:inputType="textMultiLine"
                            android:gravity="center_horizontal"/>

                        <EditText
                            android:id="@+id/etMailAdmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"
                            android:hint="@string/hintMail"
                            android:inputType="textMultiLine"
                            android:gravity="center_horizontal"/>

                        <Button
                            android:id="@+id/btSaveAdmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/primaryDarkColor"
                            android:text="@string/btSaveAdmin"
                            android:textColor="@color/primaryTextColor"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>